Fix possible window jump
Fix a window jump bug that appeared sometimes when navigating the pages.

--- a/style.scss
+++ b/style.scss
@@ -91,6 +91,7 @@ body {
 	color: $black;
 	width: 100%;
 	height: 100%;
+	max-height: 100vh;
 	margin: 0;
 	overflow: hidden;
 	-webkit-font-smoothing: subpixel-antialiased;
